--- a/examples/filters.html
+++ b/examples/filters.html
@@ -45,7 +45,7 @@
         <div>
           <h2>
             json (json)
-          </h2>{{.|json}}
+          </h2>{{$root|json}}
         </div>
         <div>
           <h2>
