mv ant-shim to extensions

--- a/examples/array-maintain.html
+++ b/examples/array-maintain.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<title>Ant.js</title>
   <!--[if lt IE 9]>
-  <script type="text/javascript" src="../src/ant-es5-shim.js"></script>
+  <script type="text/javascript" src="../extensions/ant-shim.js"></script>
   <![endif]-->
   <script type="text/javascript" src="../dist/ant.js"></script>
   <script type="text/javascript" src="../third-part/jquery.min.js"></script>
