--- a/examples/forgiving.html
+++ b/examples/forgiving.html
@@ -17,7 +17,7 @@
       <code>a() === undefined</code>: {{a() === undefined}}
     </div>
 	</div>
-  <script type="text/javascript" src="../src/ant-shim.js"></script>
+  <script type="text/javascript" src="../extensions/ant-shim.js"></script>
   <script type="text/javascript" src="../dist/ant.js"></script>
   <script type="text/javascript">
     var ant = new Ant(document.getElementById('main'), {
