--- a/examples/recursive-list.html
+++ b/examples/recursive-list.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<title>嵌套数组</title>
   <!--[if lt IE 9]>
-  <script type="text/javascript" src="../src/ant-shim.js"></script>
+  <script type="text/javascript" src="../extensions/ant-shim.js"></script>
   <![endif]-->
   <script type="text/javascript" src="../dist/ant.js"></script>
   <script type="text/javascript" src="../third-part/jquery.min.js"></script>
